@@ -1,2 +1,8 @@
 # Web-Browser-Using-JavaFX
-This project is to build a web browser using Java. I am uploading it because of a persistent request from my friend 
+This project is to build a web browser using Java's JavaFX library. I am uploading it because of an unrelented request from my friend.
+
+I run the project using Intellij IDE and make sure to include JavaFX in the project and configure the VM options as --module-path ${PATH_TO_FX} --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web
+
+The graphical interface of the code looks like this.
+
+![Kan](https://user-images.githubusercontent.com/92297934/216932495-9eb24888-e724-4aeb-8ba3-93e4843ae640.JPG)
